z-index of tooltip is now at 10 to ensure it is infront; filter_handler now initializes tooltips of delete, method selector and visibility icon; moved class and data tag from container to select element in filter.html

--- a/static/styles/tooltip/tooltipStyles.css
+++ b/static/styles/tooltip/tooltipStyles.css
@@ -11,4 +11,5 @@
 
 #tooltip.visible {
     display: block;
+    z-index: 10;
 }
